--- a/bloctrader/ClientApp/app/components/app/app.component.scss
+++ b/bloctrader/ClientApp/app/components/app/app.component.scss
@@ -1,3 +1,8 @@
-.container-fluid {
-    background-color: red;
-}
+/* You can add global styles to this file, and also import other style files */
+
+// @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+// @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
+// @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+// @import '~@angular/material/prebuilt-themes/purple-green.css';
+
+@import '~@angular/material/_theming.scss';
