--- a/bloctrader/Views/Shared/_Layout.cshtml
+++ b/bloctrader/Views/Shared/_Layout.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - bloctrader</title>
     <base href="~/" />
+    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-app-background">
     @RenderBody()
 
     @RenderSection("scripts", required: false)
