--- a/bloctrader/ClientApp/app/components/app/app.component.html
+++ b/bloctrader/ClientApp/app/components/app/app.component.html
@@ -1,6 +1,12 @@
-<div>
+<md-toolbar color="primary">
     <nav-menu></nav-menu>
-    <div>
-        <router-outlet></router-outlet>
-    </div>
-</div>
+</md-toolbar>
+<h1 id="siteTitle" i18n="Site title | The site title@@siteTitle"></h1>
+<md-sidenav-container>
+    <md-sidenav #sidenav mode="over" opened="false">
+    </md-sidenav>
+    <button md-mini-fab (click)="sidenav.toggle()">
+        <md-icon>add</md-icon>
+    </button>
+    <router-outlet></router-outlet>
+</md-sidenav-container>
